--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,3 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-
-main {
-  margin: 0 auto;
-  max-width: 90%;
-  padding: 50px 30px;
-}
 :root {
   --primary-color: #928d8d;
   --secondary-color: #0a3247;
@@ -33,6 +14,11 @@ main {
 * {
   box-sizing: border-box;
 }
+main {
+  margin: 0 auto;
+  max-width: 100%;
+  padding: 50px 30px;
+}
 
 html,
 body {
@@ -48,7 +34,7 @@ body {
   letter-spacing: 0.1em;
   background: var(--tertiary);
   color: var(--darker);
-  font-family: 'Montserrat', cursive;
+  font-family: 'Helvetica, Arial, sans-serif';
 }
 
 h1,
@@ -57,10 +43,10 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Helvetica, Arial, sans-serif';
   font-weight: 500;
-  margin: 5px 0;
   line-height: 1.25;
+  text-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
 }
 
 h1 {
@@ -72,6 +58,8 @@ h1 {
 h2 {
   font-size: 2.25rem;
   font-weight: bolder;
+  text-align: center;
+  color: var(--primary-color);
 }
 
 h3 {
@@ -94,6 +82,7 @@ p {
   font-size: 1.5rem;
   margin-top: 0;
   padding: 25px;
+  text-align: justify;
 }
 
 a {
@@ -108,13 +97,30 @@ a:hover {
 
 header {
   font-weight: 100;
+  font-size: 25px;
   background: linear-gradient(to right, rgb(69, 80, 126), rgb(29, 20, 50));
+  padding: 0.5rem;
+  text-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
 }
-
-header a {
+header ul {
   color: var(--light);
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 25px 25% 25px 25%;
 }
 
+header li a {
+  color: var(--primary-color);
+  display: inline;
+  padding: 12px;
+}
+
+header img {
+  max-height: 180px;
+  width: 100%;
+}
 button {
   font-size: 1rem;
   text-decoration: none;
@@ -138,6 +144,14 @@ button[disabled] {
 
 img {
   max-width: 100%;
+  padding: 10px;
+  border: 1px solid;
+  border-color: var(--secondary-color);
+  border-radius: 15px;  
+  -webkit-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow:    7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+  box-shadow:         7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+
 }
 
 span[role='img'] {
@@ -181,14 +195,34 @@ textarea {
   padding: 5px;
 }
 
+footer {
+  font-weight: 100;
+  font-size: 25px;
+  font-style: italic;
+  background: linear-gradient(to right, rgb(69, 80, 126), rgb(29, 20, 50));
+  align-items: center;
+  padding: 0.5rem;
+  text-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+}
 
+footer section {
+  color: var(--primary-color);
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 25px 25% 25px 25%;
+  margin: 0;
+}
 
+footer li a {
+  display: inline;
+  padding: 12px;
+}
 
 .container {
   width: 85%;
   max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .flex-row {
@@ -249,17 +283,7 @@ textarea {
   padding-bottom: var(--spacing-two);
 }
 
-.card {
-  width: 25%;
-  text-align: center;
-}
 
-.img-thumbnail {
-  width: auto;
-  height: 300px;
-  margin-bottom: 50px;
-  cursor: pointer;
-}
 
 .modalBackdrop {
   background: rgba(0, 0, 0, 0.65);
@@ -276,7 +300,7 @@ textarea {
   background: var(--darker);
   border-radius: 5px;
   max-width: 100%;
-  margin: 50px auto;
+  /* margin: 50px auto; */
   padding: 15px;
   width: 960px;
 }
@@ -284,7 +308,7 @@ textarea {
 .modalTitle {
   font-size: 18px;
   font-weight: 600;
-  margin-bottom: 25px;
+  /* margin-bottom: 25px; */
 }
 
 button {
@@ -295,7 +319,7 @@ button {
   cursor: pointer;
   font-size: 16px;
   font-weight: 600;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
   padding: 10px 15px;
 }
 
@@ -304,8 +328,8 @@ a {
   color: var(--primary);
   font-weight: 600;
   padding: 2px 4px;
-  margin-left: -2px;
-  margin-right: -2px;
+  /* margin-left: -2px;
+  margin-right: -2px; */
 }
 
 .navActive {
