--- a/src/index.css
+++ b/src/index.css
@@ -143,8 +143,11 @@ button[disabled] {
   opacity: 0.8;
 }
 
+.photo {
+  height: 300px;
+
+}
 img {
-  max-width: 100%;
   justify-content: center;
   padding: 10px;
   border: 1px solid;
