CSS added to highlight page titles

--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,6 @@ h6 {
 
 h1 {
   font-size: 2.25rem;
-  font-style: bold;
   padding: 25px;
 }
 
@@ -143,6 +142,10 @@ button[disabled] {
   opacity: 0.8;
 }
 
+#about, #resume, #contact, #portfolio {
+  background-color: #cdc2c2;
+  
+}
 .photo {
   height: 300px;
 
