--- a/src/index.css
+++ b/src/index.css
@@ -233,13 +233,14 @@ textarea {
 
 footer {
   font-weight: 100;
-  font-size: 25px;
+  font-size: 30px;
   font-style: italic;
   background: linear-gradient(to right, rgb(69, 80, 126), rgb(29, 20, 50));
   align-items: center;
   padding: 0.5rem;
   text-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
   position: fixed;
+  position: absolute;
   width: 100%;
   margin: 0 0 0 0;
   height: 200px;  
