--- a/src/index.css
+++ b/src/index.css
@@ -188,10 +188,10 @@ button[disabled] {
 img {
   justify-content: center;
   padding: 10px;
-  border: 1px solid;
-  border-color: var(--secondary-color);
+  border: 2px solid;
+  border-color: rgb(109, 111, 114);
   border-radius: 15px;
-  -webkit-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+  -webkit-box-shadow: 7px 7px 5px 0px  rgb(109, 111, 114);
   -moz-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
   box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
 }
@@ -201,7 +201,7 @@ img {
   height: 190px;
   padding: 10px;
   border: 1px solid;
-  border-color: var(--secondary-color);
+  border-color: rgb(109, 111, 114);
   border-radius: 15px;
   -webkit-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
   -moz-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
@@ -211,6 +211,9 @@ img {
 .SplitPane {
   height: 900px;
   padding: 50px;;
+  font-size: 25px;
+  color: #3f3b3b;
+  margin-bottom: 100px;
 }
 
 .SplitPane img {
