padding added to about me section

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,9 @@ body {
   background: var(--tertiary);
   color: var(--darker);
   font-family: "Helvetica, Arial, sans-serif";
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 h1,
@@ -153,11 +156,20 @@ button[disabled] {
   background-position-x: 100%;
 }
 
+#aboutPhoto {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  padding-top: 6%;
+  padding-bottom: 10%;
+}
+
 #contact-form {
   margin: 0;
 }
 #summary {
   height: 375px;
+  padding: 2.5%;
 }
 
 #skillset {
@@ -290,7 +302,8 @@ footer {
   position: fixed;
   position: absolute;
   width: 100%;
-  margin: 0 0 0 0;
+  /* margin: 0 0 0 0; */
+  margin-top: auto;
   height: 200px;
 }
 
