--- a/src/media-queries.css
+++ b/src/media-queries.css
@@ -1,50 +1,113 @@
-/*Responsive Styles*/
-
-
-/* Smartphones (portrait) ---------------- */
 @media only screen 
-and (max-width : 320px)
+and (max-width : 480px)
 {
-/* Add Your CSS Styling Here */
+    .SplitPane {
+        height: 900px;
+        padding: 0 2% 0 2%;
+        font-size: 25px;
+        color: #3f3b3b;
+        margin-bottom: 100px;
+        display: flex;
+        flex-direction: row;
+      }
+      .SplitPane img {
+        height: 100px;
+        width: 125px;
+        margin: 1rem 1rem 10rem 0.5rem;
+        background-color: rgb(104, 191, 146);
+      }
+    
+    .header {
+        width: 100%;
+    }
 }
 
-/* Smartphones (landscape) ---------------- */
 @media only screen 
-and (min-width : 321px)
-and (max-width : 767px)
+and (min-width : 481px)
+and (max-width : 768px)
 {
-/* Add Your CSS Styling Here */
+    .SplitPane {
+        height: 900px;
+        padding: 0 2% 0 2%;
+        font-size: 25px;
+        color: #3f3b3b;
+        margin-bottom: 100px;
+        display: flex;
+        flex-direction: row;
+      }
+      
+      .SplitPane img {
+        height: 100px;
+        width: 125px;
+        margin: 1rem 1rem 10rem 0.5rem;
+        background-color: rgb(184, 104, 191);
+      }
 }
 
-/* Tablets (portrait) -------------------- */
 @media only screen 
-and (min-device-width : 768px) 
+and (min-device-width : 769px) 
 and (max-device-width : 1024px) 
 and (orientation : portrait)
 {
-/* Add Your CSS Styling Here */
+    .SplitPane {
+        height: 900px;
+        padding: 0 2% 0 2%;
+        font-size: 25px;
+        color: #3f3b3b;
+        margin-bottom: 100px;
+        display: flex;
+        flex-direction: row;
+        background-color: rgb(148, 148, 198);
+      }
+
+      .SplitPane img {
+        height: 130px;
+        width: 205px;
+        margin: 1rem 1rem 10rem 0.5rem;
+      }
+      
 }
 
-
-/* Tablets (landscape) ------------------- */
 @media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape)
-{   
-/* Add Your CSS Styling Here */
-}
-
-/* Old Desktops and laptops ------------------ */
-@media only screen 
-and (min-width : 1025px) 
+and (min-device-width : 1025px) 
+and (max-device-width : 1200px) 
+and (orientation : portrait)
 {
-/* Add Your CSS Styling Here */
+    .SplitPane {
+        height: 900px;
+        padding: 0 2% 0 2%;
+        font-size: 25px;
+        color: #3f3b3b;
+        margin-bottom: 100px;
+        display: flex;
+        flex-direction: row;
+        background-color: rgb(148, 148, 198);
+      }
+
+      .SplitPane img {
+        height: 130px;
+        width: 205px;
+        margin: 1rem 1rem 10rem 0.5rem;
+      }
+      
 }
 
 /* Desktops ------------------ */
 @media only screen 
 and (min-width : 1201px) 
 {
-/* Add Your CSS Styling Here */
+    .SplitPane {
+        height: 900px;
+        padding: 0 2% 0 2%;
+        font-size: 25px;
+        color: #3f3b3b;
+        margin-bottom: 100px;
+        display: flex;
+        flex-direction: row;
+      }
+      .SplitPane img {
+        height: 200px;
+        width: 375px;
+        margin: 1rem 1rem 10rem 0.5rem;
+      }
 }
