--- a/src/index.css
+++ b/src/index.css
@@ -230,7 +230,29 @@ img {
 
 
 .SplitPane {
-  height: 250px;
+  height: 250px;@media only screen 
+and (min-device-width : 769px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait)
+{
+    .SplitPane {
+        height: 900px;
+        padding: 0 2% 0 2%;
+        font-size: 25px;
+        color: #3f3b3b;
+        margin-bottom: 100px;
+        display: flex;
+        flex-direction: row;
+        background-color: rgb(148, 148, 198);
+      }
+
+      .SplitPane img {
+        height: 130px;
+        width: 205px;
+        margin: 1rem 1rem 10rem 0.5rem;
+      }
+      
+}
   font-size: 25px;
   color: #3f3b3b;
   display: flex;
