--- a/src/media-queries.css
+++ b/src/media-queries.css
@@ -1,113 +1,143 @@
-@media only screen 
-and (max-width : 480px)
-{
-    .SplitPane {
-        height: 900px;
-        padding: 0 2% 0 2%;
-        font-size: 25px;
-        color: #3f3b3b;
-        margin-bottom: 100px;
-        display: flex;
-        flex-direction: row;
-      }
-      .SplitPane img {
-        height: 100px;
-        width: 125px;
-        margin: 1rem 1rem 10rem 0.5rem;
-        background-color: rgb(104, 191, 146);
-      }
-    
-    .header {
-        width: 100%;
-    }
+@media only screen and (max-width: 480px) {
+  .SplitPane {
+    height: 900px;
+    padding: 0 2% 0 2%;
+    font-size: 25px;
+    color: #3f3b3b;
+    margin-bottom: 100px;
+    display: flex;
+    flex-direction: row;
+  }
+  .SplitPane img {
+    height: 100px;
+    width: 125px;
+    margin: 1rem 1rem 10rem 0.5rem;
+    /* background-color: rgb(104, 191, 146); */
+  }
+
+  .header {
+    float: none;
+    width: 100%;
+  }
+
+  .footer {
+    float: none;
+    width: 100%;
+    position: fixed;
+  }
 }
 
-@media only screen 
-and (min-width : 481px)
-and (max-width : 768px)
-{
-    .SplitPane {
-        height: 900px;
-        padding: 0 2% 0 2%;
-        font-size: 25px;
-        color: #3f3b3b;
-        margin-bottom: 100px;
-        display: flex;
-        flex-direction: row;
-      }
-      
-      .SplitPane img {
-        height: 100px;
-        width: 125px;
-        margin: 1rem 1rem 10rem 0.5rem;
-        background-color: rgb(184, 104, 191);
-      }
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  .SplitPane {
+    height: 900px;
+    padding: 0 2% 0 2%;
+    font-size: 25px;
+    color: #3f3b3b;
+    margin-bottom: 100px;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .SplitPane img {
+    height: 100px;
+    width: 125px;
+    margin: 1rem 1rem 10rem 0.5rem;
+    /* background-color: rgb(184, 104, 191); */
+  }
+  .header {
+    float: none;
+    width: 100%;
+  }
+
+  .footer {
+    float: none;
+    width: 100%;
+    position: fixed;
+  }
 }
 
-@media only screen 
-and (min-device-width : 769px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait)
-{
-    .SplitPane {
-        height: 900px;
-        padding: 0 2% 0 2%;
-        font-size: 25px;
-        color: #3f3b3b;
-        margin-bottom: 100px;
-        display: flex;
-        flex-direction: row;
-        background-color: rgb(148, 148, 198);
-      }
+@media only screen and (min-device-width: 769px) and (max-device-width: 1024px) and (orientation: portrait) {
+  .SplitPane {
+    height: 900px;
+    padding: 0 2% 0 2%;
+    font-size: 25px;
+    color: #3f3b3b;
+    margin-bottom: 100px;
+    display: flex;
+    flex-direction: row;
+    /* background-color: rgb(148, 148, 198); */
+  }
 
-      .SplitPane img {
-        height: 130px;
-        width: 205px;
-        margin: 1rem 1rem 10rem 0.5rem;
-      }
-      
+  .SplitPane img {
+    height: 130px;
+    width: 205px;
+    margin: 1rem 1rem 10rem 0.5rem;
+  }
+  .header {
+    float: none;
+    width: 100%;
+  }
+
+  .footer {
+    float: none;
+    width: 100%;
+    position: fixed;
+  }
 }
 
-@media only screen 
-and (min-device-width : 1025px) 
-and (max-device-width : 1200px) 
-and (orientation : portrait)
-{
-    .SplitPane {
-        height: 900px;
-        padding: 0 2% 0 2%;
-        font-size: 25px;
-        color: #3f3b3b;
-        margin-bottom: 100px;
-        display: flex;
-        flex-direction: row;
-        background-color: rgb(148, 148, 198);
-      }
+@media only screen and (min-device-width: 1025px) and (max-device-width: 1200px) and (orientation: portrait) {
+  .SplitPane {
+    height: 900px;
+    padding: 0 2% 0 2%;
+    font-size: 25px;
+    color: #3f3b3b;
+    margin-bottom: 100px;
+    display: flex;
+    flex-direction: row;
+    /* background-color: rgb(148, 148, 198); */
+  }
 
-      .SplitPane img {
-        height: 130px;
-        width: 205px;
-        margin: 1rem 1rem 10rem 0.5rem;
-      }
-      
+  .SplitPane img {
+    height: 130px;
+    width: 205px;
+    margin: 1rem 1rem 10rem 0.5rem;
+  }
+  .header {
+    float: none;
+    width: 100%;
+  }
+
+  .footer {
+    float: none;
+    width: 100%;
+    position: fixed;
+  }
 }
 
 /* Desktops ------------------ */
-@media only screen 
-and (min-width : 1201px) 
-{
-    .SplitPane {
-        height: 900px;
-        padding: 0 2% 0 2%;
-        font-size: 25px;
-        color: #3f3b3b;
-        margin-bottom: 100px;
-        display: flex;
-        flex-direction: row;
-      }
-      .SplitPane img {
-        height: 200px;
-        width: 375px;
-        margin: 1rem 1rem 10rem 0.5rem;
-      }
+@media only screen and (min-width: 1201px) {
+  .SplitPane {
+    height: 900px;
+    padding: 0 2% 0 2%;
+    font-size: 25px;
+    color: #3f3b3b;
+    margin-bottom: 100px;
+    display: flex;
+    flex-direction: row;
+  }
+  .SplitPane img {
+    height: 200px;
+    width: 375px;
+    margin: 1rem 1rem 10rem 0.5rem;
+  }
+  .header {
+    float: none;
+    width: 100%;
+  }
+
+  .footer {
+    float: none;
+    width: 100%;
+    position: fixed;
+  }
 }
