--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,7 @@ header {
   text-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
   justify-content: space-between;
 }
+
 header h2 {
   padding: 0% 10% 0% 10%;
 }
@@ -159,7 +160,7 @@ button[disabled] {
 #portfolio {
   text-align: left;
   padding-left: 65px;
-  background-color: #cdcac2;
+  background-color: #cdc4c2;
   margin: 0 0px;
 }
 
@@ -195,14 +196,14 @@ button[disabled] {
   margin-bottom: 10px;
   display: vertical;
 }
-#skills ul li {
+/* #skills ul li {
   padding: 0.5% 2% 0.5% 3%;
   font-size: 23px;
   color: #545252;
   text-shadow: 10px 10px 20px rgba(53, 52, 52, 0.5);
   margin-bottom: 10px;
   display: vertical;
-}
+} */
 
 #pdf {
   font-size: 30px;
