--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 :root {
   --primary-color: #928d8d;
   --secondary-color: #0a3247;
@@ -11,14 +15,11 @@
   --spacing-five: calc(2.5rem);
 }
 
-* {
-  box-sizing: border-box;
-}
-main {
+/* main {
   margin: 0 auto;
   max-width: 100%;
   padding: 50px 30px;
-}
+} */
 
 html,
 body {
@@ -30,7 +31,7 @@ body {
   padding: 0;
   font-weight: 600;
   line-height: 1.5;
-  font-size: 18px;
+  font-size: 32px;
   letter-spacing: 0.1em;
   background: var(--tertiary);
   color: var(--darker);
@@ -210,7 +211,7 @@ button[disabled] {
   color: #38356c;
   text-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
   padding: 0px 0px 40px 50px;
-}
+ }
 
 #pdf:hover {
   text-decoration: underline;
@@ -369,14 +370,16 @@ textarea {
 
 footer {
   font-weight: 100;
-  font-size: 30px;
+  font-size: 35px;
   font-style: italic;
   background: linear-gradient(to right, rgb(69, 80, 126), rgb(29, 20, 50));
-  align-items: center;
+  justify-content: space-between;
   padding: 0.5rem;
   text-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
-  position: fixed;
+  /* position: fixed; */
   position: absolute;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 140px;
 }
@@ -385,7 +388,6 @@ footer section {
   color: var(--primary-color);
   display: flex;
   align-items: center;
-  justify-content: space-between;
   flex-direction: row;
   padding: 10px 10% 0px 10%;
   margin: 0 10%;
@@ -393,8 +395,9 @@ footer section {
 
 footer li {
   display: inline;
-  margin: 15px;
-  padding: 0% 3% 0% 3%;
+  margin: 0 10 0 10px;
+  justify-content: space-between;
+  padding: 2% 5% 3% 10%;
 }
 
 .container {
@@ -503,8 +506,6 @@ a {
   color: var(--primary);
   font-weight: 600;
   padding: 2px 4px;
-  /* margin-left: -2px;
-  margin-right: -2px; */
 }
 
 .navActive {
