--- a/src/index.css
+++ b/src/index.css
@@ -244,9 +244,8 @@ img {
 .SplitPane-Left {
   float: left;
   width: 50%;
-  /* height: 75%; */
+  height: 75%;
   text-align: center;
-  justify-content: space-between;
   padding: 3% 0% 3% 0%;
   font-style: italic;
   color: rgb(63, 63, 140);
@@ -255,7 +254,7 @@ img {
 .SplitPane-Mid {
   float: right;
   width: 50%;
-  /* height: 75%; */
+  height: 75%;
   text-align: center;
   padding: 3% 0% 3% 0%;
   font-style: italic;
@@ -265,7 +264,7 @@ img {
 .SplitPane-Right {
   float: right;
   width: 50%;
-  /* height: 75%; */
+  height: 75%;
   text-align: center;
   padding: 3% 0% 3% 0%;
   font-style: italic;
