--- a/src/index.css
+++ b/src/index.css
@@ -160,9 +160,9 @@ button[disabled] {
   background-color: #cdc4c2;
   margin: 0;
 }
-.aboutSection {
+.aboutSection{
   padding: 0;
-  height: 100vh;
+  height: 100%;
 }
 
 #aboutPhoto {
@@ -192,7 +192,7 @@ button[disabled] {
 }
 
 #pdf {
-  margin: 0 25% 0 35%;
+  margin: 10% 15% 0 15%;
   font-size: 30px;
   color: #38356c;
   text-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
@@ -230,8 +230,9 @@ img {
 
 #backing {
   padding: 1% 0% 1% 0%;
-  background-color:rgb(235, 230, 226);
-  margin: 0 0px;
+  /* background-color:rgb(235, 230, 226); */
+  background: linear-gradient(#ebe6e2,#ebe6e2, #ebe6e2, #45507e);
+  /* margin: 0 0px; */
   height: 100%;
 }
 .projects {
