--- a/src/index.css
+++ b/src/index.css
@@ -235,8 +235,8 @@ img {
   justify-content: center;
   padding: 10px;
   border: 2px solid;
-  border-color: rgb(109, 111, 114);
-  background-color: #9b9da3;
+  border-color: #cdc4c2;
+  background-color: #cdc4c2;
   border-radius: 15px;
   -webkit-box-shadow: 7px 7px 5px 0px  rgb(109, 111, 114);
   -moz-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
