--- a/src/media-queries.css
+++ b/src/media-queries.css
@@ -11,22 +11,28 @@
     /* background-color: rgb(148, 148, 198); */
   }
 
+
   .SplitPane img {
     height: 130px;
     width: 205px;
     margin: 1rem 1rem 10rem 0.5rem;
   }
-  .header {
-    float: none;
-    width: 100%;
+
+  .SplitPane-Right-Photo img {
+    margin: 1rem 1rem 10rem 0.5rem;
   }
 
+  /* .header {
+    float: none;
+    width: 100%;
+  } */
+/* 
   .footer {
     float: none;
     width: 100%;
     height: 100%;
     position: fixed;
-  }
+  } */
 }
 
 /* MEDIA QUERY FOR SMALL SCREENS AND LAPTOPS */
@@ -46,7 +52,7 @@
     width: 205px;
     margin: 1rem 1rem 10rem 0.5rem;
   }
-  .header {
+  /* .header {
     float: none;
     width: 100%;
   }
@@ -55,7 +61,7 @@
     float: none;
     width: 100%;
     position: fixed;
-  }
+  } */
 }
 
 /* MEDIA QUERY FOR iPADS, TABLETS & SMALLER */
@@ -76,7 +82,7 @@
     margin: 1rem 1rem 10rem 0.5rem;
     /* background-color: rgb(184, 104, 191); */
   }
-  .header {
+  /* .header {
     float: none;
     width: 100%;
   }
@@ -85,12 +91,14 @@
     float: none;
     width: 100%;
     position: fixed;
-  }
+  } */
 }
 
 /* MEDIA QUERY FOR MOBILE DEVICES */
 @media screen and (max-width: 480px) {
-
+body {
+  background: linear-gradient(#ebe6e2,#ebe6e2, #ebe6e2, #ebe6e2, #45507e);
+}
   .SplitPane {
     height: 900px;
     padding: 0 2% 0 2%;
@@ -106,7 +114,14 @@
     margin: 1rem 1rem 10rem 0.5rem;
     /* background-color: rgb(104, 191, 146); */
   }
-
+/* 
+  #backing {
+    padding: 1% 0% 1% 0%;
+    background: linear-gradient(#ebe6e2,#ebe6e2, #ebe6e2, #ebe6e2, #45507e);
+    margin: 0 0px;
+    height: 100%;
+  } */
+/* 
   .header {
     float: none;
     width: 100%;
@@ -116,5 +131,5 @@
     float: none;
     width: 100%;
     position: fixed;
-  }
+  } */
 }
