--- a/src/index.css
+++ b/src/index.css
@@ -258,8 +258,9 @@ img {
 
 .projects {
   width: 25%;
-  height: 100%;
+  /* height: 100%; */
   padding: 10px;
+  margin: 0;
   border: 1px solid;
   border-color: #cdc4c2;
   background-color: #cdc4c2;
@@ -293,8 +294,8 @@ img {
   height: 100%;
   text-align: center;
   padding: 3% 0% 3% 0%;
-  font-style: italic;
-  color: rgb(63, 63, 140);
+ color: rgb(63, 63, 140);
+ margin: 0 0 20% 0;
 }
 
 
@@ -325,6 +326,17 @@ img {
   padding: 3% 0% 3% 0%;
   font-style: italic;
   color: rgb(63, 63, 140);
+}
+
+/*project page details*/
+.title {
+  font-size: 0.8em;
+  font-style: normal;
+}
+.subtitle {
+  font-size: 0.6em;
+  font-style: italic;
+  color:#4b5580;
 }
 
 span[role="img"] {
@@ -448,6 +460,7 @@ button {
   /* margin-bottom: 30px; */
   padding: 10px 15px;
 }
+
 
 /* a {
   border-radius: 5px;
