--- a/src/index.css
+++ b/src/index.css
@@ -20,12 +20,9 @@
   min-height: 100%;
 }
 
-
-
 main {
   margin: 0 auto;
   max-width: 100%;
-  /* padding: 50px 30px; */
 }
 
 html,
@@ -185,13 +182,21 @@ button[disabled] {
   height: 60vh;
 }
 
-#skillset {
+/* #skillset {
   padding: 0;
+} */
+
+#skillset ul{
+  padding: 0.5% 2% 0.5% 3%;
+  font-size: 1em;
+  text-shadow: 10px 10px 20px rgba(53, 52, 52, 0.5);
+  margin-bottom: 10px;
+  display: vertical;
 }
 
 #skillset ul li {
   padding: 0.5% 2% 0.5% 3%;
-  font-size: 23px;
+  font-size: 0.75em;
   color: #545252;
   text-shadow: 10px 10px 20px rgba(53, 52, 52, 0.5);
   margin-bottom: 10px;
@@ -248,14 +253,6 @@ img {
   box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
 }
 
-
-/* #backing {
-  padding: 1% 0% 1% 0%;
-  background: linear-gradient(#ebe6e2,#ebe6e2, #ebe6e2, #ebe6e2, #45507e);
-   margin: 0 0px;
-  height: 100%;
-} */
-
 .projects {
   width: 25%;
   /* height: 100%; */
@@ -273,7 +270,7 @@ img {
 .SplitPane img {
   height: 200px;
   width: 375px;
-  margin: 1rem 1rem 10rem 0.5rem;
+  margin: 0.5rem 0.5rem 2.75rem 0.5rem;
 }
 
 .SplitPane-Left {
@@ -286,16 +283,14 @@ img {
   color: rgb(63, 63, 140);
 }
 
-
-/* play with subtitle if able */
 .SplitPane-Left-Projects {
   float: left;
   width: 50%;
   height: 100%;
   text-align: center;
-  padding: 3% 0% 3% 0%;
+  padding: 2% 0% 2% 0%;
  color: rgb(63, 63, 140);
- margin: 0 0 20% 0;
+ margin: 0 0 25% 0;
 }
 
 
@@ -360,11 +355,6 @@ nav li {
   cursor: pointer;
 }
 
-/* .container {
-  width: 85%;
-  max-width: 100%;
-} */
-
 .flex-row {
   display: flex;
   flex-wrap: wrap;
@@ -423,32 +413,6 @@ nav li {
   padding-bottom: var(--spacing-two);
 }
 
-.modalBackdrop {
-  background: rgba(0, 0, 0, 0.65);
-  bottom: 0;
-  left: 0;
-  overflow: auto;
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: 1;
-}
-
-.modalContainer {
-  background: var(--darker);
-  border-radius: 5px;
-  max-width: 100%;
-  /* margin: 50px auto; */
-  padding: 15px;
-  width: 960px;
-}
-
-.modalTitle {
-  font-size: 18px;
-  font-weight: 600;
-  /* margin-bottom: 25px; */
-}
-
 button {
   background: var(--primary);
   border: 0;
@@ -460,15 +424,3 @@ button {
   /* margin-bottom: 30px; */
   padding: 10px 15px;
 }
-
-
-/* a {
-  border-radius: 5px;
-  color: var(--primary);
-  font-weight: 600;
-  padding: 2px 4px;
-} */
-
-/* .navActive {
-  color: var(--secondary);
-} */
